--- a/client/package.json
+++ b/client/package.json
@@ -48,5 +48,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4444"
+  "proxy": "http://localhost:4444",
+  "devDependencies": {
+    "prettier": "2.3.2"
+  }
 }
