--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uuidv4": "^6.2.10"
   }
 }
