--- a/client/package.json
+++ b/client/package.json
@@ -48,7 +48,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4444",
+  "proxy": "http://127.0.0.1:4444",
   "devDependencies": {
     "prettier": "2.3.2"
   }
